--- a/app/src/main/res/layout/layout_home.xml
+++ b/app/src/main/res/layout/layout_home.xml
@@ -13,6 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <!-- no tracks found text -->
+    <TextView
+        android:id="@+id/noTrackFoundText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="no tracks found"
+        android:textColor="@color/white"/>
+
     <!-- navigator -->
     <RelativeLayout
         android:id="@+id/playerLayout"
